--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.sudhirtheindian4.myyogaapp">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.google.android.finsky.permission.BIND_GET_INSTALL_REFERRER_SERVICE" />
+<!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
+<!--    <uses-permission android:name="com.google.android.finsky.permission.BIND_GET_INSTALL_REFERRER_SERVICE" />-->
 
     <application
         android:allowBackup="true"
@@ -20,17 +19,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyYogaApp"
         tools:targetApi="31">
-        <service
-            android:name=".MyFirebaseMessagingService"
-            android:enabled="false"
-            android:exported="false"></service>
+<!--        <service-->
+<!--            android:name=".MyFirebaseMessagingService"-->
+<!--            android:enabled="false"-->
+<!--            android:exported="false"></service>-->
 
 
         <activity
             android:name=".AfterAge18Description"
-            android:exported="false" />
-        <activity
-            android:name=".PrivacyPolicy"
             android:exported="false" />
         <activity
             android:name=".FoodActivityDetails"
@@ -64,6 +60,7 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
+
 
 
     </application>
